<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Sport Tracker</string>
    <string name="myprofile">Mon Profil</string>
    <string name="bottom_navigation_menu_activity">Activité</string>
    <string name="bottom_nagigation_menu_profile">Profil</string>
    <string name="maps_api_key">AIzaSyDDe498SX4dhJQSnnjmYlPrUAVyxgF7d0Y</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment_2">Hello blank fragment 1</string>
    <string name="hello_blank_fragment_1">Hello blank fragment 2</string>
    <string name="timeText">Time</string>
    <string name="topScrollView">topScrollView</string>
    <string name="time">Durée</string>
    <string name="distance">Distance</string>
    <string name="rythme">Rythme (min/km)</string>
    <string name="calories">Calories (kcal)</string>
    <string name="start">Lancer</string>
    <string name="todo">TODO</string>
    <string name="profile">Profile</string>
    <string name="stop">Arreter</string>
    <string name="title_activity_opening">OpeningActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="signUp">S\'inscrire</string>
    <string name="LogIn">Se connecter</string>
    <string name="firstname">Prénom</string>
    <string name="lastname">Nom</string>
    <string name="age">Age</string>
    <string name="weight">Poids</string>
    <string name="height">Taille</string>
    <string name="password">Mot de passe</string>
    <string name="submit">Valider</string>
    <string name="loginProfile">Choisissez un profil</string>
    <string name="back">Retour</string>
    <string name="temps">Temps</string>
    <string name="chrono">00:00:00</string>
    <string name="_12_km">12 km</string>
    <string name="chrono2">00:00:00</string>
    <string name="activit_s_r_centes">Activités récentes</string>
    <string name="prenom">Prenom</string>
    <string name="btnprofil">btnProfil</string>
    <string name="voir_plus">Voir plus</string>
    <string name="il_y_a_x_jours">Il y a x jours</string>
    <string name="cette_semaine">Cette semaine</string>
    <string name="distance2">Distance</string>
    <string name="distSemaine">0 km</string>
    <string name="imagerunning">imageRunning</string>
    <string name="plus_de_details">Plus de details</string>
    <string name="nom">Nom</string>
    <string name="sexe">Sexe</string>
    <string name="naissance">JJ/MM/AAAA</string>
    <string name="location">Location</string>
    <string name="locationinput">locationInput</string>
    <string name="poids">Poids</string>
    <string name="poidsinput">poidsInput</string>
    <string name="tailleinput">tailleInput</string>
    <string name="taille">Taille</string>
    <string name="photo">photo</string>
    <string name="retour">Retour</string>

</resources>